ecmascript/parser/tests/test262-error-references/fail/c0d2e6ca2ab7f753.js.stderr
error: Expected {, got numeric literal
 --> $DIR/tests/test262-parser/fail/c0d2e6ca2ab7f753.js:1:20
  |
1 | x = { get method() 42 }
  |                    ^^

